--- a/GUI/GeneratorUI.ui
+++ b/GUI/GeneratorUI.ui
@@ -2,13 +2,28 @@
 <ui version="4.0">
  <class>SysGeneratorWidget</class>
  <widget class="QWidget" name="SysGeneratorWidget">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>679</width>
-    <height>443</height>
+    <width>578</width>
+    <height>360</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -22,6 +37,9 @@ background-color: rgb(160, 210, 235);</string>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="3" column="0">
     <layout class="QGridLayout" name="gridLayout">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetDefaultConstraint</enum>
+     </property>
      <property name="leftMargin">
       <number>6</number>
      </property>
@@ -32,7 +50,7 @@ background-color: rgb(160, 210, 235);</string>
       <number>6</number>
      </property>
      <property name="bottomMargin">
-      <number>6</number>
+      <number>15</number>
      </property>
      <item row="3" column="0">
       <widget class="QLabel" name="LblSyName">
